--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,6 +12,30 @@ body {
     margin: 0 20px;
     padding: 0;
     background-color: var(--background-white);
+
+    scrollbar-width: thin; /* Can be "auto", "thin", or "none" */
+    scrollbar-color: var(--accent-red) transparent; /* Thumb and track color */
+
+}
+
+::-webkit-scrollbar {
+    width: 1em;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 0.3em;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+::-webkit-scrollbar-track-piece:end {
+    background: transparent;
+    margin-bottom: 10px;
+}
+
+::-webkit-scrollbar-track-piece:start {
+    background: transparent;
+    margin-top: 10px;
 }
 
 a {
@@ -208,6 +232,7 @@ button {
     text-decoration: none;
     color: var(--text-black);
     font-size: 17px;
+    margin-left: 10px;
 }
 
 .header__contacts-telephone {
@@ -221,7 +246,7 @@ button {
 .button-filled {
     background-color: var(--accent-red);
     color: #fff;
-    border-radius: 20px;
+    border-radius: 10px;
     border: transparent;
     height: 45px;
     padding: 0 1.88rem;
@@ -233,7 +258,7 @@ button {
 
 .button-outlined {
     background-color: transparent;
-    border-radius: 20px;
+    border-radius: 10px;
     border: 2px solid var(--accent-red);
     color: var(--accent-red);
     padding: 0 1.88rem;
@@ -584,7 +609,7 @@ button {
 .form-section__form input, .form-section__form textarea {
     background-color: transparent;
     border: 2px solid var(--accent-red);
-    border-radius: 20px;
+    border-radius: 10px;
     padding: 14px 0 14px 15px;
     resize: none;
 }
@@ -727,7 +752,7 @@ button {
     gap: 3px;
 }
 
-.pagination-ul  a{
+.pagination-ul a {
     color: #fff;
     font-size: 15px;
     font-weight: 500;
@@ -735,7 +760,7 @@ button {
     padding: 5px 7px;
 }
 
-.pagination-item-active a{
+.pagination-item-active a {
     background-color: rgba(255, 255, 255, 0.3);
     border-width: 1px;
     border-radius: 5px;
@@ -759,7 +784,7 @@ button {
     pointer-events: none;
 }
 
-.disabled a svg path{
+.disabled a svg path {
     stroke: #cacaca;
     cursor: unset;
     pointer-events: none;
@@ -864,6 +889,7 @@ button {
     position: relative;
     margin-bottom: 10px;
 }
+
 .dropdown_with-chk__button {
     position: relative;
     display: flex;
@@ -876,10 +902,11 @@ button {
     text-align: left;
     background: transparent;
     border: 2px solid var(--accent-red);
-    border-radius: 20px;
+    border-radius: 10px;
     height: 50px;
     padding: 10px 40px 10px 15px;
 }
+
 .dropdown_with-chk__button::after {
     content: "";
     position: absolute;
@@ -892,9 +919,11 @@ button {
     pointer-events: none;
     transition: 200ms ease;
 }
+
 .dropdown_with-chk__button_active::after {
     transform: translateY(-50%) rotate(-180deg);
 }
+
 .dropdown_with-chk__list {
     margin-top: 2px;
     padding: 0;
@@ -903,19 +932,25 @@ button {
     left: 0;
     top: 50px;
     border: 2px solid var(--accent-red);
-    border-radius: 20px;
+    border-radius: 10px;
     background: var(--form-background);
     overflow: hidden;
     width: 99%;
+    max-height: 300px;
     z-index: 1;
     opacity: 0;
     visibility: hidden;
     transition: 200ms ease;
+    overflow-y: scroll;;
 }
+
 .dropdown_with-chk__list_visible {
     opacity: 1;
     visibility: visible;
+    position: relative;
+    top: unset;
 }
+
 .dropdown_with-chk__list-item {
     margin: 0;
     padding: 15px;
@@ -930,13 +965,15 @@ button {
     transition: 200ms ease;
     isolation: isolate;
 }
+
 .dropdown_with-chk__list-item input[type="checkbox"],
 .dropdown_with-chk__list-item input[type="radio"] {
     pointer-events: none;
 }
+
 .dropdown_with-chk__list-item label {
     position: absolute;
-    width: 100%;
+    width: 77%;
     height: 100%;
     top: 0;
     left: 0;
@@ -946,11 +983,13 @@ button {
     align-items: center;
     justify-content: flex-start;
     z-index: -1;
+    margin-left: 5px;
 }
 
 .dropdown_with-chk__input_hidden {
     display: none;
 }
+
 input[type="checkbox"] {
     appearance: none;
     position: relative;
@@ -964,6 +1003,7 @@ input[type="checkbox"] {
     border: 2px solid var(--accent-red);
     transition: 600ms ease;
 }
+
 input[type="checkbox"]::after {
     content: '';
     position: absolute;
@@ -978,18 +1018,20 @@ input[type="checkbox"]::after {
     visibility: hidden;
     transition: 300ms ease;
 }
+
 input[type="checkbox"]:checked {
     background: var(--accent-red);
     border: 1px solid var(--accent-red);
     transition: 300ms ease;
 }
+
 input[type="checkbox"]:checked::after {
     opacity: 1;
     visibility: visible;
     transition: 600ms ease;
 }
-/*custom select*/
 
+/*custom select*/
 
 
 .form-input:focus {
@@ -998,7 +1040,7 @@ input[type="checkbox"]:checked::after {
 
 .form-input {
     background-color: transparent;
-    border-radius: 20px;
+    border-radius: 10px;
     border: 2px solid var(--accent-red);
     font-size: 18px;
     color: var(--text-black);
@@ -1036,8 +1078,7 @@ input[type="checkbox"]:checked::after {
 
 .product-details-section {
     display: flex;
-    width: 100%
-;
+    width: 100%;
 }
 
 .main-product-image {
@@ -1389,7 +1430,7 @@ input[type="checkbox"]:checked::after {
     transform: rotate(-180deg);
 }
 
-.reviewsWrapper i:active{
+.reviewsWrapper i:active {
     transform: translateY(-50%) scale(0.85);
 }
 
@@ -1710,12 +1751,13 @@ input[type="checkbox"]:checked::after {
     }
 
     .calculator-section__survey-block__rightside {
-       flex-direction: column;
+        flex-direction: column;
         -webkit-flex-direction: column;
-       justify-content: center;
+        justify-content: center;
         align-items: center;
     }
 }
+
 @media (min-width: 1100px) {
     .catalog-wrapper__products-block {
         grid-template-columns: repeat(3, 1fr); /* Отображение 3 карточек в строке на устройствах шириной 768px и больше */
@@ -1844,7 +1886,7 @@ input[type="checkbox"]:checked::after {
         color: #fff;
     }
 
-    .mobile-news-button a{
+    .mobile-news-button a {
         color: #fff;
     }
 
@@ -2027,6 +2069,10 @@ input[type="checkbox"]:checked::after {
     .calculator-section__recommended-volume h3 {
         padding: 0 5px;
     }
+
+    .dropdown_with-chk__list {
+        max-height: 250px;
+    }
 }
 
 @media (max-width: 600px) {
@@ -2069,6 +2115,7 @@ input[type="checkbox"]:checked::after {
     .calculator-section__survey-block {
         padding: 20px 30px;
     }
+
     .survey-input {
         max-width: 150px;
     }
