--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -274,7 +274,7 @@ button {
 .main {
     margin: 40px auto;
     max-width: 1410px;
-    /* background-color should be changed to background-image */
+    min-height: 64vh;
 }
 
 .main__banner {
@@ -283,6 +283,9 @@ button {
     min-height: 512px;
     border-radius: 20px;
     justify-content: center;
+    object-fit: cover;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .main__banner-text {
@@ -609,6 +612,11 @@ button {
     border-radius: 10px;
     padding: 14px 0 14px 15px;
     resize: none;
+    transition: all 0.3s ease-in-out;
+}
+
+.form-section__form input:focus, .form-section__form textarea:focus {
+    outline: 3px var(--accent-red);
 }
 
 .form-section__form textarea {
@@ -1607,6 +1615,53 @@ input[type="checkbox"]:checked::after {
 
 .footer-accordion {
     display: none;
+}
+
+.modal-blurred {
+    display: none;
+    width: 100%;
+    height: 50px;
+}
+
+.modal-show {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.modal-block {
+    display: flex;
+    align-items: center;
+    background-color: rgba(255, 0, 0, 0.15);
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    gap: 10px;
+}
+
+.modal-block img {
+    height: 50%;
+    margin-left: 5px;
+}
+
+.modal-block .alert-message {
+    font-size: 16px;
+    text-align: center;
+    margin: 0;
+}
+
+.modal-blurred .success {
+    background-color: rgba(15, 104, 72, 0.15);
+}
+
+#close-modal {
+    max-width: fit-content;
+    padding: 0 7px;
+    margin: 0 0 0 auto;
+    font-size: 12px;
+    height: 25px;
+    border-radius: 5px;
 }
 
 @media (max-width: 1600px) {
