--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -213,6 +213,11 @@ button {
     padding: 0;
 }
 
+.header__nav-buttons li {
+    display: flex;
+    align-items: center;
+}
+
 .header__rightside {
     display: flex
 }
@@ -976,13 +981,14 @@ button {
     height: 100%;
     top: 0;
     left: 0;
-    padding-left: 45px;
+    padding-left: 40px;
     cursor: pointer;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     z-index: -1;
     margin-left: 5px;
+    user-select: none;
 }
 
 .dropdown_with-chk__input_hidden {
@@ -1700,6 +1706,109 @@ input[type="checkbox"]:checked::after {
     margin: 0;
 }
 
+.color-preview {
+    height: 10px;
+    width: 10px;
+    margin-right: 4px;
+    border: 1px solid #cacaca;
+}
+
+.sort-buttons__group {
+    display: flex;
+    height: fit-content;
+    align-items: center;
+    gap: 5px;
+    font-size: 14px;
+}
+
+.sort-buttons__group p {
+    color: var(--headers-black)
+}
+
+.sort-button {
+    border: 1px solid #cacaca;
+    border-radius: 5px;
+    padding: 3px 7px 3px 4px;
+    display: flex;
+    align-items: center;
+    background-color: transparent;
+    text-decoration: underline;
+    transition: transform .05s ease-in-out;
+}
+
+.sort-button:active {
+    transform: scale(0.95);
+}
+
+.sort-button__image {
+    display: none;
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+}
+
+.search-result__section {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.search-result__section .section-title {
+    margin-bottom: 0;
+}
+
+.active-button {
+    display: block;
+}
+
+.nav-button__static-page__content {
+    display: none;
+    background-color: var(--background-white);
+    min-width: 100px;
+    border-radius: 5px;
+    border: 1px solid #cacaca;
+    /*margin-top: 5px;*/
+}
+
+.nav-button__static-page__content a {
+    transition: all .35s ease-in-out;
+    padding: 10px 50px 10px 10px;
+}
+
+.nav-button__static-page__content a:hover {
+    background-color: #dad9d9;
+}
+
+.nav-button__static-page:hover .nav-button__static-page__content {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 58px;
+}
+
+.nav-button__static-page:hover .nav-button__static-page__p::after {
+    transform: rotate(90deg);
+}
+
+.nav-button__static-page__p {
+    position: relative;
+    padding: 5px 0;
+}
+
+.nav-button__static-page__p::after {
+    content: "";
+    position: absolute;
+    top: 10px;
+    right: -17px;
+    width: 15px;
+    height: 15px;
+    background: url("../icons/arrow-right.svg") no-repeat center;
+    pointer-events: none;
+    transition: 200ms ease
+}
+
 @media (max-width: 1600px) {
     .reviewsWrapper i:active {
         transform: translateY(-50%) scale(0.85);
@@ -2316,6 +2425,10 @@ input[type="checkbox"]:checked::after {
 
     .modal-lead-form__form .form-section__form p {
         font-size: clamp(1rem, 2vw, 17px);
+    }
+
+    .sort-buttons__group p {
+        display: none;
     }
 }
 
