--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -457,6 +457,9 @@ button {
     min-width: 192px;
     height: 100%;
     max-height: 350px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .about-us__quality-cards-wrapper {
@@ -596,6 +599,11 @@ button {
     background-color: #cacaca;
     min-height: 250px;
     border-radius: 20px;
+    background-position: center;
+}
+
+.banner a {
+    transform: translateX(100px);
 }
 
 .form-section {
@@ -952,7 +960,7 @@ button {
     opacity: 0;
     visibility: hidden;
     transition: 200ms ease;
-    overflow-y: scroll;;
+    overflow-y: scroll;
 }
 
 .dropdown_with-chk__list_visible {
@@ -2215,6 +2223,9 @@ input[type="checkbox"]:checked::after {
         height: 250px;
         background-color: #cacaca;
         margin-top: 20px;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
     }
 
     .about-us__image-placeholder {
