--- a/resources/css/widgets/custom-select.scss
+++ b/resources/css/widgets/custom-select.scss
@@ -31,7 +31,7 @@
     transform: translateY(-50%);
     width: 15px;
     height: 15px;
-    background: url("../../icons/select-arrow.svg") no-repeat center;
+    background: url('../../icons/select-arrow.svg') no-repeat center;
     pointer-events: none;
     transition: 200ms ease;
 }
